--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -60,9 +60,3 @@
     max-width: 360px;
   }
 }
-
-/* @media (max-width: 450px) {
-  .header {
-
-  }
-} */
